...
          title={meme.title}
          description={meme.description}
          onPress={() => setMeme(null)}
        />
      )}
      <FlatList
        testID={'list'}
        ListHeaderComponent={<Header onChangeText={search} title={login} />}
        keyExtractor={item => item.title}
        data={memesList}
        columnWrapperStyle={{width: '50%'}}
        numColumns={2}
        renderItem={({item}) => (
...
