...
    description:
      'Танцующий Рикардо Милос в красной бандане выглядит довольно комично, а с веселой музыкой получается еще смешнее. Танец Милоса вполне соответствует типичной гей-эротике: много мышц, танцы, «завлекающие» движения. Но мем стоит считать абстрактным, так как он не имеет особого смысла и предназначен лишь для того, чтобы поорать (или пофлексить).',
  },
  {
    image:
      'https://cs10.pikabu.ru/post_img/2020/04/07/6/1586250488153146506.jpg',
    title: 'Женщина орет на кота',
    description:
      'Мем с озадаченным котом в широком смысле можно использовать как реакцию на что-то странное, непонятное. В связке с мемом про женщин этот формат иллюстрирует необоснованные обвинения. Женщины слева символизируют родителей, учителей или кого-то, кто на вас кричит. Кот — это ты, который знаешь, что они не правы.',
  },
];

